--- a/main.html
+++ b/main.html
@@ -10,12 +10,19 @@
 </head>
 <body>
 	<div class="main">
-		<div class="ryu">
-  			<div class="ryu-still"></div>
-  			<div class="ryu-ready"></div>
-  			<div class="ryu-throwing"></div>
+		<div class="ryu-content">
+			<div class="ryu">
+	  			<div class="ryu-still"></div>
+	  			<div class="ryu-ready"></div>
+	  			<div class="ryu-throwing"></div>
+	  			<div class="ryu-cool"></div>
+			</div>
+			<div class="hadouken"></div>
 		</div>
-		<div class="hadouken"></div>
+		<div class="instructions-content">
+			<p>Click on Ryu for a Hadouken!</p>
+			<p>Click on X for a Special Pose!</p>
+		</div>
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
