font FAMILY not STYLE! And other adjustments

--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 			<div class="hadouken"></div>
 		</div>
 		<div class="instructions-content">
-			<p>Click on Ryu for a Hadouken!</p>
-			<p>Click on X for a Special Pose!</p>
+			<p>Click on <span>Ryu</span> for a Hadouken!</p>
+			<p>Click on <span>X</span> for a Special Pose!</p>
 		</div>
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
